database schema (only user), recreate-db script, add pg-promise, configure pg-promise to parse float numbers

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "koa": "^2.3.0",
     "koa-better-router": "^2.1.1",
     "node-fetch": "^1.7.1",
-    "pg": "^6.4.1",
-    "pg-native": "^2.0.1"
+    "pg-promise": "^6.3.5"
   },
   "devDependencies": {},
   "scripts": {
