--- a/config.json
+++ b/config.json
@@ -1,5 +1,13 @@
 {
   "env:global": {
-    "port": 8080
+    "port": 8080,
+    "dbConnection": {
+      "host": "localhost",
+      "port": 5432,
+      "database": "notifications",
+      "user": "notificator",
+      "max": 10,
+      "idleTimeoutMillis": 30000
+    }
   }
 }
