--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "koa": "^2.3.0",
+    "koa-better-body": "^3.0.4",
     "koa-better-router": "^2.1.1",
+    "koa-convert": "^1.2.0",
     "node-fetch": "^1.7.1",
-    "pg-promise": "^6.3.5"
+    "pg-promise": "^6.3.5",
+    "squel": "^5.11.1"
   },
   "devDependencies": {},
   "scripts": {
