--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A micro-service for sending notifications",
   "main": "index.js",
   "dependencies": {
+    "jsend": "^1.0.2",
     "koa": "^2.3.0",
     "koa-better-body": "^3.0.4",
     "koa-better-router": "^2.1.1",
