--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "koa-better-body": "^3.0.4",
     "koa-better-router": "^2.1.1",
     "koa-convert": "^1.2.0",
+    "koa-joi-bouncer": "^2.0.8",
     "node-fetch": "^1.7.1",
     "pg-promise": "^6.3.5",
-    "squel": "^5.11.1"
+    "squel": "^5.11.1",
+    "winston": "^2.3.1"
   },
   "devDependencies": {},
   "scripts": {
