--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
     "squel": "^5.11.1",
     "winston": "^2.3.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.1.0",
+    "mocha": "^3.4.2",
+    "supertest": "^3.0.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./src/server",
+    "test": "npm run clear-test-data && LOG_LEVEL=error mocha",
+    "clear-test-data": "sh ./src/database/clear-test-data.sh"
   },
   "repository": {
     "type": "git",
