--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "koa-convert": "^1.2.0",
     "koa-joi-bouncer": "^2.0.8",
     "node-fetch": "^1.7.1",
+    "nodemailer": "^4.0.1",
     "pg-promise": "^6.3.5",
     "squel": "^5.11.1",
     "winston": "^2.3.1"
