--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "supertest": "^3.0.0"
   },
   "scripts": {
-    "test": "sh ./src/database/recreate-db.sh notifications-test notificator && LOG_LEVEL=error mocha ./test"
+    "test": "LOG_LEVEL=error mocha './test/0*.*.js'"
   },
   "repository": {
     "type": "git",
