--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "supertest": "^3.0.0"
   },
   "scripts": {
-    "test": "mocha './test/0*.*.js'"
+    "test-features": "mocha './test/features/0*.*.js'",
+    "reset-test-db": "sh ./src/database/recreate-db.sh notifications_test notificator",
+    "fill-test-db": "node ./test/scripts/createTestData.js 'notifications_test'"
   },
   "repository": {
     "type": "git",
