--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+### App .gitignore
+env/.env.*
+!env/.env.example
+
+### Base .gitignore
+
 # Logs
 logs
 *.log
@@ -59,4 +65,3 @@ typings/
 
 #Webstorm
 .idea/
-
