--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "aws-sdk": "^2.92.0",
     "babel-cli": "^6.24.1",
+    "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
     "jsend": "^1.0.2",
     "koa": "^2.3.0",
@@ -30,8 +31,8 @@
     "supertest": "^3.0.0"
   },
   "scripts": {
-    "test-api": "mocha './test/features/0*.*.js'",
-    "test-notificator": "mocha './test/notificator/0*.*.js'",
+    "test-api": "NODE_ENV=test mocha './test/features/0*.*.js'",
+    "test-notificator": "NODE_ENV=test mocha './test/notificator/0*.*.js'",
     "reset-test-db": "sh ./src/database/recreate-db.sh notifications_test notificator",
     "fill-test-db": "node ./test/scripts/create-test-data.js 'notifications_test'"
   },
