postDataSuccess, postDataFail mark notifications in database

--- a/env/.env.example
+++ b/env/.env.example
@@ -13,8 +13,10 @@ API_PORT=8080
 API_LOG_LEVEL=error
 
 # Notificator
+NOTI_LOG_LEVEL=error
 NOTI_WORKERS=2
 NOTI_GET_DATA_POLL_INTERVAL=500
+NOTI_GET_DATA_POLL_SLEEP=0
 NOTI_GET_NEXT_WORKER_POLL_INTERVAL=100
 NOTI_WORKER_DEADLOCK_TIMEOUT=10000
 NOTI_WORKER_PING_INTERVAL=300
