--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "A micro-service for sending notifications",
   "main": "index.js",
   "dependencies": {
+    "JSONStream": "^1.3.1",
     "aws-sdk": "^2.92.0",
     "babel-cli": "^6.24.1",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.6",
+    "event-stream": "^3.3.4",
     "jsend": "^1.0.2",
     "koa": "^2.3.0",
     "koa-better-body": "^3.0.4",
@@ -34,7 +36,8 @@
     "test-api": "NODE_ENV=test mocha './test/features/0*.*.js'",
     "test-notificator": "NODE_ENV=test mocha './test/notificator/0*.*.js'",
     "reset-test-db": "sh ./src/database/recreate-db.sh notifications_test notificator",
-    "fill-test-db": "NODE_ENV=test node ./test/scripts/create-test-data.js 'notifications_test'"
+    "fill-test-db": "NODE_ENV=test node ./test/scripts/create-test-data.js 'notifications_test'",
+    "kill-lost-workers": "ps -ef | grep Worker.js | grep -v grep | awk '{print $2}' | xargs kill -9"
   },
   "repository": {
     "type": "git",
