--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "supertest": "^3.0.0"
   },
   "scripts": {
-    "test-api": "NODE_ENV=test mocha './test/features/0*.*.js'",
+    "test-api": "NODE_ENV=test mocha './test/api/0*.*.js'",
     "test-notificator": "NODE_ENV=test mocha './test/notificator/0*.*.js'",
     "reset-test-db": "sh ./src/database/recreate-db.sh notifications_test notificator",
     "fill-test-db": "NODE_ENV=test node ./test/scripts/create-test-data.js 'notifications_test'",
