--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "supertest": "^3.0.0"
   },
   "scripts": {
+    "heroku-start": "NODE_ENV=test node ./app/herokuApp/index.js",
     "test-api": "NODE_ENV=test mocha './test/api/0*.*.js'",
     "test-notificator": "npm run kill-lost-workers && NODE_ENV=test mocha './test/notificator/0*.*.js'",
     "reset-test-db": "sh ./src/database/recreate-db.sh notifications_test notificator",
